<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/downloadImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/download_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download" />

    <com.udacity.LoadingButton
        android:id="@+id/downloadButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="96dp"
        app:circleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadChoicesGroup"
        app:loadingColor="@color/colorPrimaryDark"
        app:mainColor="@color/colorPrimary"
        app:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/downloadChoicesGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintBottom_toTopOf="@+id/downloadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadImage">

        <RadioButton
            android:id="@+id/glideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:text="@string/glide_choice" />

        <RadioButton
            android:id="@+id/loadAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:text="@string/load_app_choice" />

        <RadioButton
            android:id="@+id/retrofitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:text="@string/retrofit_choice" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>